objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Area_of_responsibility__c</fullName>
        <inlineHelpText>Please choose a category according to the department. This field is used for marketing purposes!</inlineHelpText>
        <label>Area of responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>C-Level, General Management</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Purchasing Department</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedTaskOnNewLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pardot Task for New Lead is closed because sales deal is made on Lead Level.</description>
        <label>Closed Task On New Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_State_City_Street__c</fullName>
        <description>Address used for Lead Search Views: Country_State_City_Street</description>
        <formula>IF(ISBLANK(Country),&quot;#&quot;,Country) &amp; &quot;, &quot; &amp;
IF(ISBLANK(State),&quot;#&quot;,State)  &amp; &quot;, &quot; &amp; 
IF(ISBLANK(City),&quot;#&quot;,City) &amp; &quot;, &quot; &amp;  
IF(ISBLANK(Street),&quot;#&quot;,Street)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedByRole_apex__c</fullName>
        <description>Field where trigger write information about role. Used for Sharing.</description>
        <label>Created By Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_subcategory__c</fullName>
        <label>Industry subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultural machinery</fullName>
                </value>
                <value>
                    <fullName>Aircraft, aircraft parts</fullName>
                </value>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biogas</fullName>
                </value>
                <value>
                    <fullName>Blowers, fans</fullName>
                </value>
                <value>
                    <fullName>Bottling plants</fullName>
                </value>
                <value>
                    <fullName>Breweries</fullName>
                </value>
                <value>
                    <fullName>Cardboard</fullName>
                </value>
                <value>
                    <fullName>Certification Bodies</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Colleges</fullName>
                </value>
                <value>
                    <fullName>Compressors</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Conveyors</fullName>
                </value>
                <value>
                    <fullName>Corrugated</fullName>
                </value>
                <value>
                    <fullName>Couplings</fullName>
                </value>
                <value>
                    <fullName>Cranes</fullName>
                </value>
                <value>
                    <fullName>Desalination plant</fullName>
                </value>
                <value>
                    <fullName>Diesel engines</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Exploration - Offshore</fullName>
                </value>
                <value>
                    <fullName>Exploration - Onshore</fullName>
                </value>
                <value>
                    <fullName>Extruders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Oppoutunity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag opp generated form lead conversion</description>
        <inlineHelpText>Flag opp generated form lead conversion</inlineHelpText>
        <label>Lead Oppoutunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Group_ES__c</fullName>
        <label>Marketing Group (ES)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G1: PT oriented</fullName>
                </value>
                <value>
                    <fullName>G2: Competitor oriented</fullName>
                </value>
                <value>
                    <fullName>G3: Tech skeptical</fullName>
                </value>
                <value>
                    <fullName>G4: No budget</fullName>
                </value>
                <value>
                    <fullName>G5: Sees no need</fullName>
                </value>
                <value>
                    <fullName>G6: Covered</fullName>
                </value>
                <value>
                    <fullName>G7: Reluctant</fullName>
                </value>
                <value>
                    <fullName>G8: Not potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Producer of machines for this industry.</inlineHelpText>
        <label>OEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PardotTaskOnConvert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>False - no Pardot Task is created during Convert</description>
        <label>PardotTaskOnConvert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Service company for this industry.</inlineHelpText>
        <label>Service Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMP_Mass_Update__c</fullName>
        <label>TEMP_Mass-Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>br_CNPJ__c</fullName>
        <defaultValue>&quot;00.000.000/0000-00&quot;</defaultValue>
        <description>Insira o CNPJ da Empresa a ser cadastrada</description>
        <label>CNPJ</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Accountmanager_ALI_ID__c</fullName>
        <defaultValue>&quot;00557000006lBkE&quot;</defaultValue>
        <description>To store Accountmanager ALI ID of the assigned User.</description>
        <label>Accountmanager ALI ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Accountmanager_ALI__c</fullName>
        <label>Accountmanager ALI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Accountmanager_CM_ID__c</fullName>
        <defaultValue>&quot;00557000006lBkE&quot;</defaultValue>
        <description>To store Accountmanager CM ID of the assigned User.</description>
        <label>Accountmanager CM ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Accountmanager_CM__c</fullName>
        <label>Accountmanager CM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Accountmanager_NDT_ID__c</fullName>
        <defaultValue>&quot;00557000006lBkE&quot;</defaultValue>
        <description>To store Accountmanager NDT ID of the assigned User.</description>
        <label>Accountmanager NDT ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Accountmanager_NDT__c</fullName>
        <label>Accountmanager NDT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Average_Lead_Lifetime__c</fullName>
        <formula>IF(IsConverted, ConvertedDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Lead Lifetime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Bussines_Unit_formula__c</fullName>
        <formula>IF ( TEXT(Owner:User.sf42_Business_Unit__c)  &lt;&gt;  &apos;&apos;, TEXT(Owner:User.sf42_Business_Unit__c),
   /* ALL Countries without not divided for CM,ALI,NDT */

      IF (CONTAINS(Owner:Queue.QueueName, &quot;Belgium&quot;), &quot;Belgium&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Brazil&quot;), &quot;Brazil&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;North America&quot;), &quot;North America&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;China&quot;), &quot;China&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Dubai&quot;), &quot;Dubai&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;France&quot;), &quot;France&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Italy&quot;), &quot;Italy&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Japan&quot;), &quot;Japan&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Poland&quot;), &quot;Poland&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Russia&quot;), &quot;Russia&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Singapore&quot;), &quot;Singapore&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Spain&quot;), &quot;Spain&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Turkey&quot;), &quot;Turkey&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;United Kingdom&quot;), &quot;UK&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;North America - Sales Leads&quot;), &quot;North America&quot;,
      

   /* ALI QUEUES */ 
   IF (CONTAINS(Owner:Queue.QueueName, &quot;ALI&quot;),
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Germany&quot;), &quot;Germany - CM&quot;, 
      IF (CONTAINS(Owner:Queue.QueueName, &quot;International Sales&quot;), &quot;Inter. - ALI&quot;,

   &quot;ALI Other&quot;)),
 
   /* CM QUEUES */
   IF (CONTAINS(Owner:Queue.QueueName, &quot;CM&quot;),
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Germany&quot;), &quot;Germany - CM&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;International Sales&quot;), &quot;Inter. - CM&quot;,

   &quot;CM Other&quot;)),


   /* NDT QUEUES */
   IF (CONTAINS(Owner:Queue.QueueName, &quot;NDT&quot;),
      IF (CONTAINS(Owner:Queue.QueueName, &quot;Germany&quot;), &quot;Germany - NDT&quot;,
      IF (CONTAINS(Owner:Queue.QueueName, &quot;International Sales&quot;), &quot;Inter. - NDT&quot;,
  
   &quot;NDT Other&quot;)),

   &quot;Other&quot;)))))))))))))))))))</formula>
        <inlineHelpText>Business unit of current owner.</inlineHelpText>
        <label>Business Unit.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Created_in_Year__c</fullName>
        <description>The Year in which the Lead was created.</description>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Created in Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_DQ1__c</fullName>
        <description>Data Quantity field calculation no. 1</description>
        <formula>IF(ISBLANK(TEXT(sf42_de_Type__c)), 
IF(ISBLANK(Website), IF(ISBLANK(Street), 0.0, 0.05),IF(ISBLANK(Street), 0.05, 0.1)), 
IF(ISBLANK(Website), IF(ISBLANK(Street), 0.05, 0.1),IF(ISBLANK(Street), 0.1, 0.15)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ptt_DQ1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ptt_DQ2__c</fullName>
        <description>Data Quantity field calculation no. 2</description>
        <formula>IF(ISBLANK(PostalCode), 
IF(ISBLANK(City), IF(ISBLANK(State), 0.0, 0.05),IF(ISBLANK(State), 0.05, 0.1)), 
IF(ISBLANK(City), IF(ISBLANK(State), 0.05, 0.1),IF(ISBLANK(State), 0.1, 0.15)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ptt_DQ2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ptt_DQ3__c</fullName>
        <description>Data Quantity field calculation no. 3</description>
        <formula>IF(ISBLANK(TEXT(Salutation)), 
IF(ISBLANK(FirstName), IF(ISBLANK(Country), 0.0, 0.05),IF(ISBLANK(Country), 0.05, 0.1)), 
IF(ISBLANK(FirstName), IF(ISBLANK(Country), 0.05, 0.1),IF(ISBLANK(Country), 0.1, 0.15)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ptt_DQ3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ptt_Data_Quantity__c</fullName>
        <description>Data Quantity calculation max 100%, 30% is from mandatory fields.</description>
        <formula>0.3 + ptt_DQ1__c + ptt_DQ2__c + ptt_DQ3__c + ptt_DQ4__c + ptt_DQ5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overview about the level of filled out fields in the Lead form which become relevant in the process of qualifying and converting the
lead. For Fields configuration details please see https://pruftechnik.my.salesforce.com/06957000002ts5G</inlineHelpText>
        <label>Data Quantity [%]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ptt_Double_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_FormSubmissionID__c</fullName>
        <description>Field to store the Pardot Form submission id delivered from website.</description>
        <label>FormSubmissionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Full_Name__c</fullName>
        <formula>TRIM(FirstName  &amp; &apos; &apos;  &amp;  LastName)</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_How_many_days_as_Open__c</fullName>
        <formula>if ( TEXT(Status) = &quot;Open&quot; &amp;&amp;  IsConverted = TRUE,
ConvertedDate - DATEVALUE(CreatedDate) ,
    if (ISNULL(ptt_Status_change_date__c),
    NOW() - CreatedDate,
    ptt_Status_change_date__c - CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculate how many days Lead has status Open.
Time in days between Status Change date and Create Date is calculated.
In case that Lead was Converted with status Open then number of days between Create Date and Convert Date is counted.</inlineHelpText>
        <label>How many days as Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_IsActive_Lead_Owner__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive Lead Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Last_Customer_URL__c</fullName>
        <label>Last Customer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ptt_Last_Task_Subject__c</fullName>
        <description>The field with last customer activity subject from Pardot. Older tasks are stored as Activity history.</description>
        <label>Last Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Lead_Community_Link__c</fullName>
        <formula>&quot;https://pruftechnik-community.force.com/&quot;+Id</formula>
        <inlineHelpText>Working URL link for Community Users.</inlineHelpText>
        <label>Lead Community Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Lead_ID_opportunity__c</fullName>
        <description>Mapped to opportunity Created from Lead field.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Lead_Id_account__c</fullName>
        <description>For Mapping fields. It is mapped to Account &quot;Created form Lead&quot; field.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Lead_Id_contact__c</fullName>
        <description>This field hold the Id of a Lead record and is mapped to Contact &quot;From Lead&quot;</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Lead_Source_Tool__c</fullName>
        <description>Field used to specify records created by Lobster, a tool for automatic Leads creation from CSV.</description>
        <label>Lead Source tool</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Newsletter is intended to indicate, that the lead or contact has registered for a newsletter.</description>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Owner_Name__c</fullName>
        <formula>if (Owner:User.Id !=null, Owner:User.Full_Name_for_filters__c, Owner:Queue.QueueName)</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_PLZ_Wider_Area__c</fullName>
        <description>Field returns two first digits from Postal code for Wide Area analization.</description>
        <formula>LEFT(PostalCode,2)</formula>
        <label>PLZ Wider Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Pardot_Task_Comment__c</fullName>
        <label>Pardot Task Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Pardot_Task_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pardot Task Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Pardot_Task_Subject__c</fullName>
        <label>Pardot Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Region_ALI__c</fullName>
        <label>Region ALI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Region_CM__c</fullName>
        <label>Region CM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Region_NDT__c</fullName>
        <label>Region NDT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Status_change_date__c</fullName>
        <inlineHelpText>This field hold the date/time when status was changed from Open to other.</inlineHelpText>
        <label>Status change date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ptt_Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the Customer not agree to receive a surveys communication.</description>
        <label>Survey Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_external_sync_EmailOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for synchronization data from Lobster to HasEmailOptedOut. Leads automatic creation.</description>
        <label>External sync EmailOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_external_sync_Lead_Currency__c</fullName>
        <description>Field used for synchronization data from Lobster to LeadCurrency. Leads automatic creation.</description>
        <label>External sync Lead Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>TRY</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_gl_Academic_Title__c</fullName>
        <label>Academic Title.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_gl_Communication_Language__c</fullName>
        <inlineHelpText>Please chose which language is most preferred for communication.</inlineHelpText>
        <label>Lead language.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_gl_Letter_Salutation__c</fullName>
        <formula>IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;German&quot;), 
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot; Sehr geehrter Herr &quot;, 
			&quot;Ms.&quot;, &quot;Sehr geehrte Frau &quot;, 
			&quot;Mrs.&quot;, &quot;Sehr geehrte Frau &quot; ,
			&quot;Miss&quot;, &quot;Sehr geehrte Fräulein &quot;,
                        &quot;Herr&quot;, &quot;Sehr geehrter Herr &quot;, 
                        &quot;Frau&quot;, &quot;Sehr geehrter Frau &quot;,
			&quot;Fräulein&quot;, &quot;Sehr geehrte Fräulein &quot;,
			&quot;&quot;) 
		&amp; 	IF( CONTAINS(TEXT(sf42_de_Akademic_Title__c), &quot;Prof&quot;), &quot;Professor &quot;,
				(
					IF( CONTAINS(TEXT(sf42_de_Akademic_Title__c), &quot;Dr&quot;), &quot;Dr. &quot;,
					&quot;&quot;
					)
		
				) 
			)
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	, 
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Spanish&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Estimado Sr. &quot;, 
			&quot;Ms.&quot;, &quot;Estimada Sra. &quot;, 
			&quot;Mrs.&quot;, &quot;Estimada Sra. &quot; ,
			&quot;Miss&quot;, &quot;Estimada Sra. &quot;,
			&quot;&quot;) 
		&amp; IF( ptt_gl_Academic_Title__c = &quot;&quot;, &quot;&quot;, ptt_gl_Academic_Title__c &amp; &quot; &quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	, 
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;French&quot;) || ISPICKVAL( sf42_ca_Preferred_Language__c, &quot;French&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Monsieur &quot;, 
			&quot;Ms.&quot;, &quot;Mademoiselle &quot;, 
			&quot;Mrs.&quot;, &quot;Madame &quot; ,
			&quot;Miss&quot;, &quot;Mademoiselle &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Italian&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Sig. &quot;, 
			&quot;Ms.&quot;, &quot;Sig.ra &quot;, 
			&quot;Mrs.&quot;, &quot;Sig.na &quot;,
			&quot;Miss&quot;, &quot;Sig.ra &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Turkish&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Bay &quot;, 
			&quot;Ms.&quot;, &quot;Bayan &quot;, 
			&quot;Mrs.&quot;, &quot;Bayan &quot;,
			&quot;Miss&quot;, &quot;Bayan &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)	
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Portuguese&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Prezado Sr. &quot;, 
			&quot;Ms.&quot;, &quot;Prezada Sra. &quot;, 
			&quot;Mrs.&quot;, &quot;Prezada Sra. &quot;,
			&quot;Miss&quot;, &quot;Prezada Srta. &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;English&quot;) || ISPICKVAL( sf42_ca_Preferred_Language__c, &quot;English&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Dear Mr. &quot;, 
			&quot;Ms.&quot;, &quot;Dear Ms. &quot;, 
			&quot;Mrs.&quot;, &quot;Dear Mrs. &quot;,
			&quot;Miss&quot;, &quot;Dear Miss &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)	
	,
	&quot;Wrong Contact language&quot;
	)
	)
	)
	)
	)
	)
)</formula>
        <label>Letter Salutation New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_gl_PARALIGN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used when a Lead contains the &quot;Paralign&quot; word during a Lead creation.</description>
        <label>PARALIGN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_it_IT_Region__c</fullName>
        <formula>IF( State = &quot;&quot;,null,
IF(CONTAINS(&quot;AQ:CH:PE:TE:&quot;, State),&quot;Abruzzo&quot;,
IF(CONTAINS(&quot;MT:PZ:&quot;, State),&quot;Basilicata&quot;,
IF(CONTAINS(&quot;CZ:CS:KR:RC:VV:&quot;, State),&quot;Calabria&quot;,
IF(CONTAINS(&quot;AV:BN:CE:NA:SA:&quot;, State),&quot;Campania&quot;,
IF(CONTAINS(&quot;BO:FE:FC:MO:PR:PC:RA:RE:RN:&quot;, State),&quot;Emilia-Romagna&quot;,
IF(CONTAINS(&quot;GO:PN:TS:UD:&quot;, State),&quot;Friuli-Venezia Giulia&quot;,
IF(CONTAINS(&quot;FR:LT:RI:RM:VT:&quot;, State),&quot;Lazio&quot;,
IF(CONTAINS(&quot;GE:IM:SP:SV:&quot;, State),&quot;Liguria&quot;,
IF(CONTAINS(&quot;BG:BS:CO:CR:LC:LO:MN:MI:MB:PV:SO:VA:&quot;, State),&quot;Lombardia&quot;,
IF(CONTAINS(&quot;AN:AP:FM:MC:PU:&quot;, State),&quot;Marche&quot;,
IF(CONTAINS(&quot;CB:IS:&quot;, State),&quot;Molise&quot;,
IF(CONTAINS(&quot;AL:AT:BI:CN:NO:TO:VB:VC:&quot;, State),&quot;Piemonte&quot;,
IF(CONTAINS(&quot;BA:BT:BR:FG:LE:TA:&quot;, State),&quot;Puglia&quot;,
IF(CONTAINS(&quot;CA:CI:VS:NU:OG:OT:OR:SS:&quot;, State),&quot;Sardegna&quot;,
IF(CONTAINS(&quot;AG:CL:CT:EN:ME:PA:RG:SR:TP:&quot;, State),&quot;Sicilia&quot;,
IF(CONTAINS(&quot;AR:FI:GR:LI:LU:MS:PI:PT:PO:SI:&quot;, State),&quot;Toscana&quot;,
IF(CONTAINS(&quot;BZ:TN:&quot;, State),&quot;Trentino-Alto Adige&quot;,
IF(CONTAINS(&quot;PG:TR:&quot;, State),&quot;Umbria&quot;,
IF(CONTAINS(&quot;AO:&quot;, State),&quot;Valle d&apos;Aosta&quot;,
IF(CONTAINS(&quot;BL:PD:RO:TV:VE:VR:VI:&quot;, State),&quot;Veneto&quot;, null
)))))))))))))))))))))</formula>
        <label>IT Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_tax_number__c</fullName>
        <description>Fiscal ID, tax number.</description>
        <label>Tax number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Country_ISO_Code__c</fullName>
        <description>Used in Lead trigger</description>
        <label>Country ISO Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
</CustomObject>